# rag-chatbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: fetch_sample_corpus.py
src/: config.py  evaluation.py  main.py  pdf_processor.py  rag_engine.py  schemas.py  vector_store.py
src/static/: index.html
tests/: conftest.py  test_main.py  test_pdf_processor.py  test_rag_engine.py  test_vector_store.py
